--- a/src/App.css
+++ b/src/App.css
@@ -8,15 +8,16 @@
 
 /* Define the base background color for the body */
 body {
-  background-color: #4b3286;
-  /* Corresponds to 'dark-purple' */
+  background-color: #242222;
+  /* base-dark */
   color: white;
 }
 
 /* Custom utility class for text glowing effect */
 @layer utilities {
   .text-glow {
-    text-shadow: 0 0 8px #3affa6, 0 0 16px #3affa6;
+    text-shadow: 0 0 8px #00FFFF, 0 0 16px #00FFFF;
+    /* neon-blue glow */
   }
 }
 
@@ -26,14 +27,14 @@ body {
 }
 
 ::-webkit-scrollbar-track {
-  background: #1a1032;
-  /* dark-purple */
+  background: #1A1A1A;
+  /* base-light */
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: #ffaaff;
+  background-color: #FF00FF;
   /* neon-pink */
   border-radius: 20px;
-  border: 3px solid #1a1032;
-  /* dark-purple */
+  border: 3px solid #1A1A1A;
+  /* base-light */
 }
